public/stylesheets/style.less
/* ... */
.mb9 { margin-bottom : 9px !important}
.mb10 { margin-bottom : 10px !important}
.mb20 { margin-bottom : 20px !important}
.mb30 { margin-bottom : 30px !important}
.mb40 { margin-bottom : 40px !important}
.mb50 { margin-bottom : 50px !important}

.ml5 { margin-left : 5px !important}
.ml10 { margin-left : 10px !important}
.ml20 { margin-left : 20px !important}
.ml30 { margin-left : 30px !important}
.ml40 { margin-left : 40px !important}
.ml50 { margin-left : 50px !important}

.mr10 { margin-right : 10px !important}
.mr20 { margin-right : 20px !important}
.mr30 { margin-right : 30px !important}
.mr40 { margin-right : 40px !important}
.mr50 { margin-right : 50px !important}

.pd0{ padding: 0px!important;}
.pd20{ padding: 20px;}
.pb0{padding-bottom: 0px!important;}
.pt0{padding-top: 0px!important;}

.td7{ width:7px; }
.td100{ width:100px; }
.td150{ width:150px; }
.td200{ width:200px; }
.td300{ width:300px; }
.td350{ width:350px; }
.width100pcnt { width:100% }

th{
  padding-left: 15px !important;
  padding-right: 15px !important;
}

.pointer-none{
  pointer-events: none;
}
.pointer-none .Select-control{
    background-color: #eee;
    opacity: 1;
}

.bgcolor-lightGreen { background-color: #42f48f !important }
.bgcolor-lightBlue { background-color: #79e5d8 !important }
.bgcolor-lightgray { background-color: #d1cfca !important }
.bgcolor-light { background-color: #e8f7f6 !important }
.bgcolor-white { background-color: #ffffff !important }
.bgcolor-gray { background-color: #eaeade !important; color: #000; }
.bgcolor-yellow { background-color: #efed56 !important; }
.bgcolor-red { background-color: #f90800 !important;color:white }
.bgcolor-green { background-color: #05aa47 !important; color:white }

#main {
  min-height: 550px;
}
/**
  tree view
*/
.tree-view ul, li { list-style: none; margin: 0; padding: 0; }
.tree-view ul { padding-left: 1em; }
.tree-view li { padding-left: 1em;
  border: 1px dotted black;
  border-width: 0 0 1px 1px; 
}
.tree-view li.container { border-bottom: 0px; }
.tree-view li.empty { font-style: italic;
  color: silver;
  border-color: silver;
}
.tree-view li .text-container { margin: 0;
  background: #F2F2F2;
  position: relative;
  top: 0.5em; 
  font-size: 20px;
}
.tree-view li ul { 
  border-top: 1px dotted black; 
  margin-left: -1em;     
  padding-left: 2em; 
}
.tree-view ul li:last-child ul {
  border-left: 1px solid white;
  margin-left: -17px;
}
.navspan {
  cursor: pointer;
}
/**
  end tree view
*/

.headAccess{
    border: 1px solid #000;
    border-radius: 5px;
    position: fixed;
    height: 40px;
    top: -20px;
    padding: 20px 10px;
    right: 50px;
    box-shadow: 0 0 5px rgba(0,0,0,0.6);
    -moz-box-shadow: 0 0 5px rgba(0,0,0,0.6);
    -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.6);
    -o-box-shadow: 0 0 5px rgba(0,0,0,0.6);
}

.add-new-button {
    float: right;
    margin-right: 10px;
    font-size: 20px;
}

.form-title {
    float: left;
    margin-left: 10px;
    font-size: 20px;
}

.truncate {
  width: 250px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

a {
  color: #00B7FF;
}
section {
    padding: 100px 0;
}

.login-page {
  width: 360px;
  padding: 8% 0 0;
  margin: auto;
}
.form-card{
    max-width: 480px;
    /*margin: 0px auto;*/
    padding: 10px 20px;
}
.mid-card{
    max-width: 500px;
    margin: 0px auto;
    padding: 10px 20px;
}
.form {
  position: relative;
  z-index: 1;
  background: #FFFFFF;
  max-width: 360px;
  margin: 100px auto;
  padding: 45px;
  text-align: center;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}
input {
  outline: 0;
  background: #f2f2f2;
  width: 100%;
  border: 0;
  margin: 0 0 15px;
  padding: 15px;
  box-sizing: border-box;
  font-size: 14px;
}
textarea {
   resize: none;
}
button {
  text-transform: uppercase;
  outline: 0;
  /*background: #4CAF50;*/
  border: 0;
  padding: 15px;
  color: #FFFFFF;
  font-size: 14px;
  -webkit-transition: all 0.3 ease;
  transition: all 0.3 ease;
  cursor: pointer;
}

.form button{
   width: 100%;
}

.card {
    width: 100%;
    background-color: #FFF;
    width: 100%;
    -webkit-box-shadow: 0 0 4px 0 rgba(0,0,0,0.2);
    -moz-box-shadow: 0 0 4px 0 rgba(0,0,0,0.2);
    box-shadow: 0 0 4px 0 rgba(0,0,0,0.2);
    margin-bottom: 20px !important;
    color: #333;

}

.card .card-body {
    padding: 30px;
}
.sep {
    width: 100%;
    height: 1px;
    clear: both;
    background: #e5e5e5;
}


.dropdown-submenu {
    position: relative;
}

.dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
}

.dropdown-submenu:hover>.dropdown-menu {
    display: block;
}

.dropdown-submenu>a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    border-left-color: #ccc;
    margin-top: 5px;
    margin-right: -10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color: #fff;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left: -100%;
    margin-left: 10px;
}
.menu-list{
    clear: both;
    font-weight: 400;
    color: #333;
    display: block;
    padding: 3px 20px;
    white-space: nowrap;
}
.formTable{
   margin-left: auto;
   margin-right: auto;
}
.formTable td{
   text-align: left;
   padding: 5px 10px;
}

#dataTable th{
  vertical-align:middle;
}

.customTab{
    border: 1px solid #024457;
    padding: 5px;
    font-weight: bold;
    cursor: pointer;
}

.active{
    color: #fff;
    background-color: #167F92;
}

.clickable{
  cursor: pointer;
}

.editSupplierForm tr td .form-input {
  margin: 10px;
}

.custom-btn {
  margin: 20px;
}

@media (min-width: 768px){
  .navbar-right {
    margin-right: 15px;
  }
}


/*time picker design*/
.rc-time-picker {
  display: inline-block;
  box-sizing: border-box;
}
.rc-time-picker * {
  box-sizing: border-box;
}
/* ... */

